[package]
name = "gdcm-rs"
version = "0.1.0"
authors = ["Peter Evers <pevers90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
cc = "1.0.67"

[dependencies]
libc = "0.2.88"
snafu = "0.6.10"
strum = "0.20"
strum_macros = "0.20"
# Will be moved
byteorder = "1.4.3"
image = "0.23.14"

[lib]
name = "gdcm_rs"
path = "src/lib.rs"

[dev-dependencies]
dicom-test-files = "0.2.0"
dicom-object = { path = "../dicom-rs/object" }
dicom-core = { path ="../dicom-rs/core" }
dicom-transfer-syntax-registry = { path = "../dicom-rs/transfer-syntax-registry" }
dicom-encoding = { path = "../dicom-rs/encoding" }
rstest = "0.6.4"
