[package]
name = "gdcm-rs"
version = "0.5.0"
description = "GDCM bindings for Rust"
homepage = "https://github.com/pevers/gdcm-rs"
repository = "https://github.com/pevers/gdcm-rs"
readme = "README.md"
keywords = ["dicom", "gdcm", "pixel", "encoding"]
license = "MIT"
authors = ["Peter Evers <pevers90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[dependencies]
libc = "0.2.88"
snafu = "0.7.1"
strum = "0.24.1"
strum_macros = "0.24.2"

[lib]
name = "gdcm_rs"
path = "src/lib.rs"

[features]
default = ["charls"]
charls = []
